[gd_scene load_steps=2 format=2]

[ext_resource path="res://Server.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="btnHost" type="Button" parent="."]
margin_left = 105.0
margin_top = 170.0
margin_right = 334.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( -396, -170 )
text = "HOST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnJoin" type="Button" parent="."]
margin_left = 604.0
margin_top = 297.0
margin_right = 833.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( -396, -170 )
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtIP" type="TextEdit" parent="."]
margin_left = 606.0
margin_top = 184.0
margin_right = 805.0
margin_bottom = 214.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPort" type="TextEdit" parent="."]
margin_left = 607.0
margin_top = 224.0
margin_right = 806.0
margin_bottom = 254.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 576.0
margin_top = 191.0
margin_right = 616.0
margin_bottom = 205.0
text = "IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 568.0
margin_top = 230.0
margin_right = 608.0
margin_bottom = 244.0
text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btnHost" to="." method="_on_btnHost_pressed"]
[connection signal="pressed" from="btnJoin" to="." method="_on_btnJoin_pressed"]
